--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,11 +1,72 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    
-    <p>
-        You have reached the the most comprehensive on-demand content available to help you develop transactable offers for the
-        Microsoft commercial marketplace. This site features instructional videos, 
-        interactive hands-on labs, and sample code to provide a better understanding of the marketplace.
-    </p>
+
+    <div style="margin-bottom: 50px;">
+        <p>
+            You have reached the the most comprehensive on-demand content available to help you develop transactable offers for the
+            Microsoft commercial marketplace. This site features instructional videos, 
+            interactive hands-on labs, and sample code to provide a better understanding of the marketplace.
+        </p>
+    </div>
+
+    <div>
+        <div class="row card-row">
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Mastering SaaS offers</h5>
+                        <p class="card-text">
+                            This comprehensive content takes you through all you need to get a custom SaaS offer up and running. 
+                            From landing pages to webhooks, the technical course will help you get your SaaS offer up and 
+                            running in days instead of weeks.
+                        </p>
+                        <a href="#" class="btn btn-primary">Take me to it</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Mastering the SaaS Accelerator</h5>
+                        <p class="card-text">
+                            Instead of building your own custom SaaS solution, consider using the SaaS Accelerator. The SaaS accelerator is a turnkey solution meeting the technical requirements for a SaaS offer and can be installed in 20 minutes.                        
+                        </p>
+                        <a href="#" class="btn btn-primary">Take me to it</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row card-row">
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Mastering Managed Applications offers</h5>
+                        <p class="card-text">
+                            With a powerful ARM based deployment model, Azure Managed Applications are popular among those who want to deploy resources into the customer's environment, but still maintain control of those resources.
+                        </p>
+                        <a href="#" class="btn btn-primary">Take me to it</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Mastering virtual machine offers</h5>
+                        <div class="card-text">
+                            <p>
+                                Virtual machines are a popular way to deliver solutions to customers. Learn how in this comprehensive course on building VM offers.
+                            </p>
+                            <p>
+                                You'll learn everything from how to package your solution to how to make it available on the Azure marketplace.
+                            </p>
+                        </div>
+                        <a href="#" class="btn btn-primary">Take me to it</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
