--- a/src/templates/nav.html
+++ b/src/templates/nav.html
@@ -11,28 +11,24 @@
           </li>
             
           {% if user %}
-
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              {{ user["name"] }}
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}">Sign out</a></li>
-            </ul>
-          </li>
-          
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                {{ user["name"] }}
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}">Sign out</a></li>
+              </ul>
+            </li>
           {% else %}
-
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('auth.login') }}">Sign in</a>
-          </li>
-          
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('auth.login') }}">Sign in</a>
+            </li>
           {% endif %}
         </ul>
         <form class="d-flex" method="post" action="{{ url_for('search.search_results') }}">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
           name="search_term">
-          <button id="search_button" class="btn btn-outline-success" type="submit">Search</button>
+          <button id="search_button" class="btn btn-primary" type="submit">Search</button>
         </form>
       </div>
     </div>
