cards are same height

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,11 +16,15 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Mastering SaaS offers</h5>
-                        <p class="card-text">
-                            This comprehensive content takes you through all you need to get a custom SaaS offer up and running. 
-                            From landing pages to webhooks, the technical course will help you get your SaaS offer up and 
-                            running in days instead of weeks.
-                        </p>
+                        <div class="card-text">
+                            <p>
+                                This comprehensive content takes you through all you need to get a custom SaaS offer up and running. 
+                            </p>
+                            <p>
+                                From landing pages to webhooks, the technical course will help you get your SaaS offer up and 
+                                running in days instead of weeks.
+                            </p>
+                        </div>
                         <a href="#" class="btn btn-primary">Take me to it</a>
                     </div>
                 </div>
@@ -29,9 +33,14 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Mastering the SaaS Accelerator</h5>
-                        <p class="card-text">
-                            Instead of building your own custom SaaS solution, consider using the SaaS Accelerator. The SaaS accelerator is a turnkey solution meeting the technical requirements for a SaaS offer and can be installed in 20 minutes.                        
+                        <div class="card-text">
+                        <p>
+                            Instead of building your own custom SaaS solution, consider using the SaaS Accelerator. 
                         </p>
+                        <p>
+                            The SaaS accelerator is a turnkey solution meeting the technical requirements for a SaaS offer and can be installed in 20 minutes.                        
+                        </p>
+                        </div>
                         <a href="#" class="btn btn-primary">Take me to it</a>
                     </div>
                 </div>
