--- a/src/templates/nav.html
+++ b/src/templates/nav.html
@@ -9,10 +9,22 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Home</a>
           </li>
-            
+          
+          <li class="nav-item dropdown">
+            <a class="active nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Courses
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li>One</a></li>
+              <li>Two</a></li>
+              <li>Three</a></li>
+              <li>Four</a></li>
+            </ul>
+          </li>
+
           {% if user %}
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="active nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 {{ user["name"] }}
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -21,7 +33,7 @@
             </li>
           {% else %}
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('auth.login') }}">Sign in</a>
+              <a class=" active nav-link" href="{{ url_for('auth.login') }}">Sign in</a>
             </li>
           {% endif %}
         </ul>
