--- a/src/templates/nav.html
+++ b/src/templates/nav.html
@@ -10,19 +10,20 @@
             <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Home</a>
           </li>
           
-          <li class="nav-item dropdown">
-            <a class="active nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Courses
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li>One</a></li>
-              <li>Two</a></li>
-              <li>Three</a></li>
-              <li>Four</a></li>
-            </ul>
-          </li>
+          {% if nav_model["playlists"] %}
+            <li class="nav-item dropdown">
+              <a class="active nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Courses
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                {% for playlist in nav_model["playlists"] %}
+                  <li><a class="dropdown-item" href="{{ url_for('content.playlist', playlist_id=playlist['id']) }}">{{ playlist["name"] }}</a></li>
+                {% endfor %}
+              </ul>
+            </li>
+          {% endif %}
 
-          {% if user %}
+          {% if nav_model["user"] %}
             <li class="nav-item dropdown">
               <a class="active nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 {{ user["name"] }}
