Update search input placeholder

--- a/src/templates/nav.html
+++ b/src/templates/nav.html
@@ -39,7 +39,7 @@
           {% endif %}
         </ul>
         <form class="d-flex" method="post" action="{{ url_for('search.search_results') }}">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+          <input class="form-control me-2" type="search" placeholder="Search content" aria-label="Search"
           name="search_term">
           <button id="search_button" class="btn btn-primary" type="submit">Search</button>
         </form>
