Add styling to navbar and accordion

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -6,6 +6,7 @@
 
 .navbar {
     margin-bottom: 20px;
+    border-radius: 8px;
 }
 
 .short_input {
@@ -54,4 +55,5 @@
 
 .dropdown-menu{
     border-radius: 8px;
+    border: 1px solid blue;
 }
