--- a/src/templates/nav.html
+++ b/src/templates/nav.html
@@ -1,6 +1,6 @@
 <h1>Mastering the Marketplace</h1>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top"">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
@@ -17,7 +17,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 {% for playlist in nav_model["playlists"] %}
-                  <li><a class="dropdown-item" href="{{ url_for('content.playlist', playlist_id=playlist['id']) }}">{{ playlist["name"] }}</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('content.playlist', playlist_id=playlist['id']) }}">{{ playlist["short_name"] }}</a></li>
                 {% endfor %}
               </ul>
             </li>
@@ -41,7 +41,7 @@
         <form class="d-flex" method="post" action="{{ url_for('search.search_results') }}">
           <input class="form-control me-2" type="search" placeholder="Search content" aria-label="Search"
           name="search_term">
-          <button id="search_button" class="btn btn-primary" type="submit">Search</button>
+          <button id="search_button" class="btn text-light" type="submit">Search</button>
         </form>
       </div>
     </div>
