--- a/src/content/templates/playlist.html
+++ b/src/content/templates/playlist.html
@@ -6,7 +6,7 @@
   <div class="list-group">
 
     {% for content in model["content"]: %}
-      <a href="{{ content['id'] }}" class="list-group-item list-group-item-action">{{ content["title"] }}</a>
+      <a href="{{ content['id'] }}" class="list-group-item list-group-item-action content-list-item">{{ content["title"] }}</a>
     {% endfor %}
   
   </div>
