Add playlists section to content_detail.html and update search_index.html to include clickable titles

--- a/src/content/templates/content_detail.html
+++ b/src/content/templates/content_detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+
     <div class="mb-3">
       <h2 class="content-detail-title">{{ model.content['title'] }}</h2>
     </div>
@@ -24,6 +25,7 @@
       </div>
     </div>
 
+    <!-- playlists -->
     <div class="mb-3">
       <label for="playlists" class="form-label">Playlists</label>
       <div id="playlists" class="list-group list-group-flush">
