--- a/src/search/templates/search_index.html
+++ b/src/search/templates/search_index.html
@@ -13,7 +13,9 @@
             {% for result in model.get_search_results() %}
                 <tr>
                     <th scope="row">{{ loop.index }}</th>
-                    <td>{{ result['title'] }}</td>
+                    <td>
+                        <a href="{{ url_for('content.content_detail', content_id=result['id']) }}" class="">{{ result['title'] }}</a>
+                    </td>
                 </tr>
             {% endfor %}
         </tbody>
