--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -15,11 +15,11 @@
     <div class="accordion" id="news-accordian">
         <div class="accordion-item">
             <h2 class="accordion-header" id="webinar-news">
-            <button class="accordion-button bg-light text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            <button class="accordion-button collapsed bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                 <strong>Live and recorded marketplace webinars!</strong>
             </button>
             </h2>
-            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="webinar-news" data-bs-parent="#news-accordian">
+            <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="webinar-news" data-bs-parent="#news-accordian">
             <div class="accordion-body">
                 <p>
                     Webinars occur almost daily and cover all things marketplace from technical implementations to accelerating your business.
@@ -35,7 +35,7 @@
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="workshop-news">
-            <button class="accordion-button bg-light text-dark collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            <button class="accordion-button collapsed bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                 <strong>Technical workshops posted</strong>
             </button>
             </h2>
