--- a/src/static/style.css
+++ b/src/static/style.css
@@ -53,7 +53,7 @@
     height: 180px;
 }
 
-.dropdown-menu{
+.dropdown-menu {
     border-radius: 8px;
     border: 1px solid blue;
 }
@@ -73,7 +73,12 @@
 }
 
 .accordion-button {
-    color: #000;
-    font-weight: bold;
+    /* background-color: #0d6efd!important; */
+    /* color: #fff; */
+}
+
+.accordion-button:not(.collapsed) {
+    background-color: #0d6efd!important;
+    color: #fff;
 }
 
